--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Illustrations</title>
   <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
   <script src="script.js" defer></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://nag-jun02.github.io/website/css/style.css">
 </head>
 <body>
 
